# Near-coinflip-contract

./: Cargo.toml  build.sh  online_test.sh  test.sh
neardev/: dev-account  dev-account.env
src/: lib.rs
